Fixed: Nav squish between 650px and 501px.

--- a/css/index.css
+++ b/css/index.css
@@ -327,7 +327,7 @@ ul {
     header nav{
         order: 2;
         width: 100%;
-        flex-wrap: wrap;
+        /*flex-wrap: wrap;*/
     }
     /*header nav a{
         width: 100%;
